--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
   },
   "scripts": {
     "build": "tsc && bun copy-assets.js",
+    "build:cloudflare": "tsc -p tsconfig.cloudflare.json",
     "dev": "bun run cli/index.ts",
     "mcp": "bun run bin/vibesec-mcp",
     "test": "bun test",
     "test:coverage": "bun test --coverage",
     "test:mcp": "bun test tests/mcp",
     "benchmark": "bun --expose-gc run scripts/run-benchmarks.ts",
-    "lint": "eslint . --ext .ts",
+    "lint": "eslint cli scanner reporters src --ext .ts",
     "format": "prettier --write \"**/*.{ts,json,md}\"",
     "format:check": "prettier --check \"**/*.{ts,json,md}\"",
-    "scan": "bun run cli/index.ts scan"
+    "scan": "bun run cli/index.ts scan",
+    "deploy:cloudflare": "npm run build:cloudflare && wrangler deploy"
   },
   "keywords": [
     "security",
@@ -32,7 +34,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ferg-cod3s/vibesec-bun-poc.git"
+    "url": "https://github.com/ferg-cod3s/vibesec.git"
   },
   "files": [
     "dist/",
@@ -62,7 +64,8 @@
     "prettier": "^3.1.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "wrangler": "^4.46.0"
   },
   "engines": {
     "node": ">=16.0.0",
